# GenshinUID

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Config.py  Config.yaml  Dockerfile  README.md  __init__.py  all_import.py  bot.py  genshinuid.py  getDB.py  getData.py  getImg.py  getMes.py  get_data.py  get_guild_data.py  get_image.py  get_mihoyo_bbs_data.py  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml  unittest.yml
ARK/: audioARK.json  helpARK.json  masterARK.json
GenshinUID/: __init__.py  all_import.py  auto_install.py  base.py  client.py  config.py  genshinuid.py  get_data.py  get_image.py  get_mihoyo_bbs_data.py  main.py  models.py  path.py  utils.py  version.py
GenshinUID/genshinuid_abyss/: __init__.py  draw_abyss_card.py
GenshinUID/genshinuid_achievement/: __init__.py  all_achi.json  daily_achi.json  draw_achi.py  get_achi_desc.py  template.py
GenshinUID/genshinuid_adv/: Genshin All Char.xlsx  __init__.py  char_adv_list.json  get_adv.py
GenshinUID/genshinuid_ann/: __init__.py  ann_card.py  config.json  main.py  util.py
GenshinUID/genshinuid_check/: __init__.py  backup_data.py
GenshinUID/genshinuid_code/: __init__.py  data_source.py
GenshinUID/genshinuid_collection/: __init__.py  const.py  draw_collection_card.py  draw_new_collection_card.py
GenshinUID/genshinuid_compute/: __init__.py  aa.json  get_my_pack.py  utils.py
GenshinUID/genshinuid_config/: __init__.py  config_default.py  default_config.py  draw_config_card.py  gs_config.py  models.py  set_config.py
GenshinUID/genshinuid_dailycost/: __init__.py  draw_daily_cost.py  get_daily_data.py
GenshinUID/genshinuid_data/: __init__.py  export_data.py  import_data.py  reset_config.py
GenshinUID/genshinuid_enka/: __init__.py  draw_arti_rank.py  draw_artifacts_lib.py  draw_char_card.py  draw_char_curve.py  draw_char_info.py  draw_char_rank.py  draw_group_dmg.py  draw_normal.py  draw_rank_list.py  draw_role_rank.py  get_akasha_data.py  get_enka_img.py  start.py  to_card.py  to_data.py  to_data_by_mys.py
GenshinUID/genshinuid_etcimg/: __init__.py
GenshinUID/genshinuid_eventlist/: __init__.py  draw_event_img.py  get_event_data.py
GenshinUID/genshinuid_gachalog/: __init__.py  draw_gachalogs.py  export_and_import.py  get_gachalogs.py  lelaer_tools.py
GenshinUID/genshinuid_gachaurl/: __init__.py  gacha_url.py
GenshinUID/genshinuid_gcg/: __init__.py  draw_gcgdesk.py  draw_gcginfo.py
GenshinUID/genshinuid_guide/: __init__.py  abyss_history.py  abyss_new_history.py  deal_blue_card.py  get_abyss_data.py  get_bbs_post_guide.py  get_card.py  get_guide.py  get_new_abyss_data.py  review.json
GenshinUID/genshinuid_guild/: __init__.py
GenshinUID/genshinuid_help/: __init__.py  draw_help_card.py  get_help.py  help.json
GenshinUID/genshinuid_map/: __init__.py  create_genshinmap.py  draw_genshinmap_card.py
GenshinUID/genshinuid_meta/: __init__.py
GenshinUID/genshinuid_mhybbscoin/: __init__.py  daily_mihoyo_bbs_coin.py  get_mihoyo_bbs_coin.py
deploy/: .env.dev  cookiecutter.yml  update_pyproject.py
enkaToData/: dataToMap.py  drawCharCard.py  enkaToData.py  panle2Json.py
genshin_uid/: get_data.py  get_image.py  get_mihoyo_bbs_coin.py  get_mihoyo_bbs_data.py  main.py
genshinuid_abyss/: __init__.py  draw_abyss_card.py
genshinuid_adv/: Genshin All Char.xlsx  __init__.py
genshinuid_check/: __init__.py  backup_data.py
genshinuid_collection/: __init__.py  draw_collection_card.py
genshinuid_config/: __init__.py  draw_config_card.py  set_config.py
genshinuid_enka/: __init__.py  draw_char_card.py
genshinuid_etcimg/: __init__.py
genshinuid_eventlist/: __init__.py  draw_event_img.py  get_event_data.py
genshinuid_gachalog/: __init__.py  draw_gachalogs.py  export_and_import.py  get_gachalogs.py
genshinuid_guide/: __init__.py
genshinuid_help/: __init__.py  draw_help_card.py  help.json
genshinuid_map/: __init__.py  create_genshinmap.py  draw_genshinmap_card.py
genshinuid_meta/: __init__.py
genshinuid_mhybbscoin/: __init__.py  get_mihoyo_bbs_coin.py
genshinuid_mys/: __init__.py
genshinuid_note/: __init__.py
genshinuid_resin/: __init__.py  draw_resin_card.py  notice.py
genshinuid_resource/: __init__.py
genshinuid_roleinfo/: __init__.py  draw_roleinfo_card.py
genshinuid_signin/: __init__.py  sign.py
genshinuid_user/: __init__.py  add_ck.py  draw_user_card.py
genshinuid_wikitext/: __init__.py  get_wiki_text.py
getInfo/: getDB.py  getData.py  getImg.py  getMes.py
mihoyo_libs/: Genshin All Char.xlsx  char_adv_list.json  get_data.py  get_image.py  get_mihoyo_bbs_coin.py  get_mihoyo_bbs_data.py
mys/: Wuyi无疑
tests/: .env  .env.prod  .env.test  conftest.py  gen_char_li.py  test_adv.py  test_base.py  test_etc.py  test_guide.py  test_metadata.py  test_wiki.py  utils.py
tools/: data_to_map.py  gen_char_li.py  get_action.py  get_char_action.py  panle_to_json.py  test.py
util/: gen_char_li.py
(+603 files in other folders)
