[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nonebot-plugin-genshinuid"
version = "4.0.6"
description = "支持OneBot(QQ)、OneBotV12、QQ频道、微信、KOOK（开黑啦）、Telegram（电报）、FeiShu（飞书）的全功能NoneBot2原神插件"
authors = ["KimigaiiWuyi <444835641@qq.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/KimigaiiWuyi/GenshinUID/tree/v4.0-nonebot2"
repository = "https://github.com/KimigaiiWuyi/GenshinUID"
documentation = "https://docs.gsuid.gbots.work/#/"
packages = [
    { include = "GenshinUID" }
]
exclude = []

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/KimigaiiWuyi/GenshinUID/issues"

[tool.poetry.dependencies]
python = "^3.8.1"
nonebot2 = ">=2.0.0b4"
pillow = ">=9.2.0"
gitpython = ">=3.1.27"
msgspec = ">=0.13.1"
aiofiles = ">=23.1.0"
websockets = ">=11.0.1"
nonebot-plugin-apscheduler = "^0.2.0"

[[tool.poetry.source]]
name = "USTC"
url = "https://pypi.mirrors.ustc.edu.cn/simple"
default = false
secondary = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.5"
pre-commit = "^2.21.0"
pycln = "^2.1.2"
